Bug 159171 - Calc: crash after Edit->Select->Select Unprotected Cells upon a second time
Summary: Calc: crash after Edit->Select->Select Unprotected Cells upon a second time
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Matt K
URL:
Whiteboard: target:24.8.0 target:24.2.1 target:7.6.5
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-13 23:26 UTC by Matt K
Modified: 2024-01-15 14:23 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matt K 2024-01-13 23:26:32 UTC
Description:
Calc: crash after Edit->Select->Select Unprotected Cells upon a second time

Steps to Reproduce:
1.Open Calc, select Edit->Select->Select Unprotected Cells
2.CTRL+C,CTRL+V
3.Type "f"
4.Select Edit->Select->Select Unprotected Cells
5.CTRL+C,CTRL+V

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 06b1d611dad281162a6a0a8fc495e51737687276
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 1 Matt K 2024-01-13 23:28:07 UTC
Note this bug depends on tdf#151752 being fixed
Comment 2 Matt K 2024-01-14 00:19:00 UTC
Fix is tracked in: https://gerrit.libreoffice.org/c/core/+/162033
Comment 3 Commit Notification 2024-01-14 04:43:46 UTC
Matt K committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3b10bbacb8a12a00c35683eeaae4a75046a84aac

tdf#159171 Prevent crash after selecting unprotected cells 2 times

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-01-15 11:49:03 UTC
Matt K committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/fe1d56b3bc895d23f7e53fb7e2414862403099a0

tdf#159171 Prevent crash after selecting unprotected cells 2 times

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-01-15 14:23:42 UTC
Matt K committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/87cf3f7fb877db5eca5aa7923586207920d19b79

tdf#159171 Prevent crash after selecting unprotected cells 2 times

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.