tdf#159171 Prevent crash after selecting unprotected cells 2 times

The problem is that the code tries to check for a table on a clip-
board doc, but doesn't find any so it propagates nullptr back to
the caller, which is then used without being checked thereby
leading to a crash.  The fix is to check the result of the table
check of clipboard doc before doing any operations with it, thus
preventing the crash.

Change-Id: Ieb4a52d0c1cb713d5c14930e5e559e5bf520b330
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162033
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 3b10bbacb8a12a00c35683eeaae4a75046a84aac)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162091
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>